--- a/React/myapp/package.json
+++ b/React/myapp/package.json
@@ -6,16 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "mdb-react-ui-kit": "^1.5.0",
+    "axios": "^0.24.0",
     "navbar": "^2.1.0",
     "react": "^17.0.2",
-    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
-    "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
